--- a/symfony_fw/templates/microservice/api/basic/index.html.twig
+++ b/symfony_fw/templates/microservice/api/basic/index.html.twig
@@ -13,7 +13,7 @@
         <link href="https://ls1.reinventsoftware.org/projects/uebusaito/symfony_fw/public/microservice/api/basic/api.css" rel="stylesheet"/>
     </head>
     <body>
-        <p class="apiBasic_text">Api basic page.</p>
+        <p class="apiBasic_text">ApiBasic page.</p>
         <script src="https://ls1.reinventsoftware.org/projects/uebusaito/symfony_fw/public/microservice/api/basic/jquery_3.3.1.min.js"></script>
         <script src="https://ls1.reinventsoftware.org/projects/uebusaito/symfony_fw/public/microservice/api/basic/Api.js"></script>
     </body>
