--- a/symfony_fw/public/css/system/basic.css
+++ b/symfony_fw/public/css/system/basic.css
@@ -156,7 +156,9 @@ table tbody tr td { text-align: center; border-bottom: 1px solid #dee2e6; paddin
 
 .cursor_custom { cursor: pointer; }
 
-.apiBasic_log { height: 300px; overflow-y: scroll; padding: 10px; background-color: #000000; color: white; }
+.api_card { display: inline-block; }
+
+.api_log { height: 300px; overflow-y: scroll; padding: 10px; background-color: #000000; color: white; }
 
 #body_progress { display: block; height: 100%; background-color: #ffffff; position: fixed; top: 0; bottom: 0; left: 0; right: 0; z-index: 2000; }
 
