--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -513,7 +513,10 @@ table {
     cursor: pointer;
 }
 
-.apiBasic_log {
+.api_card {
+    display: inline-block;
+}
+.api_log {
     height: 300px;
     overflow-y: scroll;
     padding: 10px;
