--- a/symfony_fw/templates/render/control_panel/microservice_api_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_api_create.html.twig
@@ -5,6 +5,7 @@
     <p>{% trans %}microserviceApiCreate_2{% endtrans %}</p>
     <form id="form_cp_microservice_api_create" action="{{path("cp_microservice_api_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+        {{form_row(form.controller, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.description, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.active)}}
 
