--- a/symfony_fw/templates/render/module/page_view.html.twig
+++ b/symfony_fw/templates/render/module/page_view.html.twig
@@ -25,14 +25,14 @@
                 {% if (response.values.userCreate != "-" and response.values.userModify == "-") %}
                     <p><i class="material-icons md-14">pets</i> <span class="mdc-theme--on-surface">{% trans %}pageView_1{% endtrans %}</span>{{response.values.userCreate}}</p>
                     <p><i class="material-icons md-14">calendar_today</i> <span class="mdc-theme--on-surface">{% trans %}pageView_2{% endtrans %}</span>{{response.values.dateCreate[0]}} [{{response.values.dateCreate[1]}}]</p>
-                {% elseif (response.values.userModify != "-") %}
+                {% elseif (response.values.userModify != "-" and response.values.dateModify != "-") %}
                     <p><i class="material-icons md-14">pets</i> <span class="mdc-theme--on-surface">{% trans %}pageView_3{% endtrans %}</span>{{response.values.userModify}}</p>
                     <p><i class="material-icons md-14">calendar_today</i> <span class="mdc-theme--on-surface">{% trans %}pageView_4{% endtrans %}</span>{{response.values.dateModify[0]}} [{{response.values.dateModify[1]}}]</p>
                 {% endif %}
             </div>
         {% endif %}
         
-        {% if urlCurrentPageId > 5 %}
+        {% if response.values.comment == true and urlCurrentPageId > 5 %}
             {{-render(controller("App\\Controller\\PageCommentController::renderAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 
             {{-render(controller("App\\Controller\\PageCommentController::saveAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
