--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -293,6 +293,10 @@ table {
     }
 }
 
+.mdc-snackbar__action-button {
+    opacity: 1;
+    visibility: visible;
+}
 
 .logo_main_big {
     display: block;
