--- a/symfony_fw/templates/render/control_panel/setting.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting.html.twig
@@ -8,7 +8,7 @@
         <div class="accordion">
             {{form_row(form.template)}}
 
-            <div class="form_row template_colum">
+            <div class="form_row template_column">
                 <p>{% trans %}setting_3{% endtrans %}</p>
                 {% for key, value in form.templateColumn %}
                     <div>
