--- a/symfony_fw/public/css/system/basic.css
+++ b/symfony_fw/public/css/system/basic.css
@@ -162,6 +162,8 @@ table tbody tr td { text-align: center; border-bottom: 1px solid #dee2e6; paddin
 
 .api_log { height: 300px; overflow-y: scroll; padding: 10px; background-color: #000000; color: white; }
 
+.graph_container { height: 400px; }
+
 #body_progress { display: block; height: 100%; background-color: #ffffff; position: fixed; top: 0; bottom: 0; left: 0; right: 0; z-index: 2000; }
 
 #panel_id_1 p { margin: 0; }
@@ -188,8 +190,9 @@ table tbody tr td { text-align: center; border-bottom: 1px solid #dee2e6; paddin
 
 #form_cp_setting_save .template_column { margin-bottom: 10px; }
 #form_cp_setting_save .template_column p { margin: 0; }
-#form_cp_setting_save .template_column div { display: inline-block; }
-#form_cp_setting_save .template_column div img { display: block; margin-left: 10px; }
+#form_cp_setting_save .template_column > div { display: inline-block; margin-left: 35px; }
+#form_cp_setting_save .template_column > div .mdc-form-field { vertical-align: top; }
+#form_cp_setting_save .template_column > div img { margin-left: 10px; display: block; }
 
 #form_pageComment .mdc-text-field--textarea { width: 100%; }
 #form_pageComment .mdc-text-field--textarea .mdc-text-field__input { resize: none; }
