--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -37,6 +37,7 @@
         <link href="{{asset("css/system/table_and_pagination.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/upload.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/wysiwyg.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/chaato.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/widget.css")}}" rel="stylesheet"/>
     </head>
     <body class="mdc-typography user_select_none">
@@ -147,7 +148,8 @@
                 'cpApiBasicProfile': "{{path("cp_apiBasic_profile", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpApiBasicProfileSave': "{{path("cp_apiBasic_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpApiBasicDelete': "{{path("cp_apiBasic_delete", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
-                'cpApiBasicLog': "{{path("cp_apiBasic_log", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}"
+                'cpApiBasicLog': "{{path("cp_apiBasic_log", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpApiBasicGraph': "{{path("cp_apiBasic_graph", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}"
             };
 
             var setting = {
@@ -190,6 +192,7 @@
         <script type="text/javascript" src="{{asset("javascript/system/PopupEasy.js")}}"></script>
         <script type="text/javascript" src="{{asset("javascript/system/Language.js")}}"></script>
         <script type="text/javascript" src="{{asset("javascript/system/Wysiwyg.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Chaato.js")}}"></script>
         <script type="text/javascript" src="{{asset("javascript/system/PageComment.js")}}"></script>
         <script type="text/javascript" src="{{asset("javascript/system/MaterialDesign.js")}}"></script>
         <script type="text/javascript" src="{{asset("javascript/system/WidgetSearch.js")}}"></script>
