Restyle - Work in progress.

--- a/symfony_fw/public/css/system/basic.css
+++ b/symfony_fw/public/css/system/basic.css
@@ -61,7 +61,7 @@ table thead tr th { position: relative; padding: 0 24px 0 24px; text-align: cent
 table thead tr th i { top: 0; right: 0; position: absolute; }
 table tbody tr td { text-align: center; border-bottom: 1px solid #dee2e6; padding: 5px; }
 
-.table_loading { visibility: hidden; font-size: 35px; }
+.update_loading { visibility: hidden; font-size: 35px; }
 
 .mdc-top-app-bar { z-index: 1000; }
 .mdc-top-app-bar .mdc-top-app-bar__row { -webkit-transition: all 0.4s ease-out; -moz-transition: all 0.4s ease-out; -o-transition: all 0.4s ease-out; transition: all 0.4s ease-out; background-image: url("../../images/templates/basic/16-9.jpg"); background-size: cover; background-position: center; }
@@ -163,6 +163,10 @@ table tbody tr td { text-align: center; border-bottom: 1px solid #dee2e6; paddin
 .api_log { height: 300px; overflow-y: scroll; padding: 10px; background-color: #000000; color: white; }
 
 .graph_container { height: 400px; }
+
+.material_upload { margin: 10px 0 0 5px; }
+.material_upload label { vertical-align: super; }
+.material_upload input { display: none; }
 
 #body_progress { display: block; height: 100%; background-color: #ffffff; position: fixed; top: 0; bottom: 0; left: 0; right: 0; z-index: 2000; }
 
