--- a/symfony_fw/templates/render/control_panel/page_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/page_create.html.twig
@@ -41,6 +41,7 @@
         </div>
         
         {{form_row(form.comment, {'dense': ""})}}
+        {{form_row(form.onlyParent, {'dense': ""})}}
         {{form_row(form.onlyLink, {'dense': ""})}}
         {{form_row(form.link, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "link"})}}
 
