--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -54,7 +54,7 @@
 {% block columnCenterContainer %}
     {% if app.user %}
         <div class="sortable_column">
-            {% if urlExtra == "" or urlExtra == "cp_sytem_info" %}
+            {% if urlExtra is empty or urlExtra == "cp_sytem_info" %}
                 {% if is_granted("ROLE_ADMIN") == true or is_granted("ROLE_MODERATOR") == true %}
                     <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list cp_system_info">
                         {% for key, value in response.output.phpinfo %}
