--- a/symfony_fw/templates/render/my_page/myPage_payment_select.html.twig
+++ b/symfony_fw/templates/render/my_page/myPage_payment_select.html.twig
@@ -6,7 +6,7 @@
 
             {{-include("@templateRoot/include/table_and_pagination.html.twig")-}}
             
-            <i class="material-icons rotate_loop table_loading">autorenew</i>
+            <i class="material-icons rotate_loop update_loading">autorenew</i>
             <table>
                 <thead>
                     <tr>
