--- a/symfony_fw/templates/render/my_page/myPage_profile.html.twig
+++ b/symfony_fw/templates/render/my_page/myPage_profile.html.twig
@@ -7,11 +7,8 @@
     <div class="accordion">
         <form id="form_myPage_profile" action="{{path("myPage_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div id="upload_myPage_profile_container">
-                <div>
-                    <label>Avatar</label>
-
-                    {{-include("@templateRoot/include/upload.html.twig")-}}
-                </div>
+                {{-include("@templateRoot/include/upload.html.twig", {'label': "Avatar"})-}}
+                
                 <div>
                     <img class="avatar" src="{{avatar}}" alt="Avatar"/>
                 </div>
