--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -534,7 +534,7 @@ table {
 }
 
 .material_upload {
-    margin: 10px 0 0 5px;
+    padding: 5px 0 5px 5px;
     
     label {
         vertical-align: super;
