--- a/symfony_fw/templates/render/myPage.html.twig
+++ b/symfony_fw/templates/render/myPage.html.twig
@@ -4,10 +4,12 @@
         <i class="material-icons mdc-tab__icon">person</i>
         <span class="mdc-tab__icon-text">{% trans %}myPage_2{% endtrans %}</span>
     </a>
-    <a class="mdc-tab mdc-tab--with-icon-and-text" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "mp_payment"})}}">
-        <i class="material-icons mdc-tab__icon">account_balance</i>
-        <span class="mdc-tab__icon-text">{% trans %}myPage_3{% endtrans %}</span>
-    </a>
+    {% if (settingRow['payment'] == true) %}
+            <a class="mdc-tab mdc-tab--with-icon-and-text" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "mp_payment"})}}">
+                <i class="material-icons mdc-tab__icon">account_balance</i>
+                <span class="mdc-tab__icon-text">{% trans %}myPage_3{% endtrans %}</span>
+            </a>
+    {% endif %}
     <span class="mdc-tab-bar__indicator"></span>
 </nav>
 
@@ -18,7 +20,7 @@
     {% if settingRow['credit'] == true %}
         {{-render(controller("App\\Controller\\MyPage\\MyPageProfileController::creditAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
     {% endif %}
-{% elseif urlExtra == "mp_payment" %}
+{% elseif urlExtra == "mp_payment" and settingRow['payment'] == true %}
     {{-render(controller("App\\Controller\\MyPage\\MyPagePaymentController::selectAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 {% endif %}
 
