--- a/symfony_fw/public/scss/system/wysiwyg.scss
+++ b/symfony_fw/public/scss/system/wysiwyg.scss
@@ -1,5 +1,5 @@
 @media(max-width: "839px") {
-    #wysiwyg {
+    .wysiwyg {
         .toolbar {
             .mdc-fab {
                 margin: 2px 0 2px 0;
@@ -8,7 +8,7 @@
     }
 }
 
-#wysiwyg {
+.wysiwyg {
     position: relative;
     margin-top: 10px;
     
