--- a/symfony_fw/templates/include/wysiwyg.html.twig
+++ b/symfony_fw/templates/include/wysiwyg.html.twig
@@ -1,4 +1,4 @@
-<div id="wysiwyg">
+<div class="wysiwyg">
     <div class="toolbar">
         <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Source">
             <span class="mdc-fab__icon material-icons" data-command="source">code</span>
