--- a/symfony_fw/templates/render/module/page_view.html.twig
+++ b/symfony_fw/templates/render/module/page_view.html.twig
@@ -2,7 +2,7 @@
 
 {% block panelId %}panel_id_{{response.module.id}}{% endblock %}
 {% block moduleContainer %}
-    <div class="page_container">
+    <div class="page_container user_select_text">
         {% if response.values.title != "" %}
             <div class="header">
                 <h1 class="mdc-typography--headline6">{{response.values.title}}</h1>
