--- a/symfony_fw/public/css/page_controller_action/include_test.css
+++ b/symfony_fw/public/css/page_controller_action/include_test.css
@@ -9,6 +9,8 @@
 @viewport { width: device-width; }
 .user_select_none { -webkit-touch-callout: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
+.user_select_text { -webkit-touch-callout: text; -webkit-user-select: text; -moz-user-select: text; -ms-user-select: text; user-select: text; }
+
 .user_touch_none { -ms-touch-action: none; touch-action: none; }
 
 .clearfix::after { content: ""; clear: both; }
