Restyle - Work in progress.

--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -147,6 +147,10 @@ $boxBackgroundColor: #ededed;
             padding-top: 45px !important;
         }
     }
+    
+    .graph_container {
+        overflow-y: scroll;
+    }
 }
 
 html, body {
