--- a/symfony_fw/public/css/system/basic.css
+++ b/symfony_fw/public/css/system/basic.css
@@ -52,7 +52,8 @@
   .menu_root_container ul .parent > .parent_content .children_container .parent .target:hover { background-color: rgba(0, 0, 0, 0.1); }
   .menu_root_container ul .parent > .parent_content .children_container .parent .parent_icon { display: none; }
   .menu_root_container ul .parent > .parent_content .children_container .parent .parent_content { position: absolute; top: 5px; left: 200px; border-bottom: none; } }
-@media (max-width: 599px) { .main .sortable_column { padding-top: 45px !important; } }
+@media (max-width: 599px) { .main .sortable_column { padding-top: 45px !important; }
+  .graph_container { overflow-y: scroll; } }
 html, body { margin: 0; padding: 0; }
 
 html { height: 100%; }
