--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -313,6 +313,14 @@ table {
     visibility: visible;
 }
 
+.mdc-dialog__surface {
+    .mdc-dialog__header__title {
+        p {
+            margin: 0;
+        }
+    }
+}
+
 .logo_main_big {
     display: block;
     width: 70px;
@@ -636,7 +644,19 @@ table {
         height: auto;
         padding: 10px;
         
-        .quote_text {
+        .detail {
+            margin: 0;
+            font-size: 11px;
+        }
+        
+        .quote {
+            margin: 0;
+            display: block;
+            background: $boxBackgroundColor;
+            padding: 10px;
+            border-radius: 20px;
+            white-space: initial !important;
+            
             .quote_avatar {
                 width: 40px;
                 height: 40px;
@@ -645,15 +665,10 @@ table {
                 margin-right: 5px;
                 border-radius: 50%;
             }
-
-            display: block;
-            background: $boxBackgroundColor;
-            padding: 10px;
-            border-radius: 20px;
-            white-space: initial !important;
         }
         
         .argument {
+            margin: 0;
             padding: 10px 10px 0 10px;
         }
         
