--- a/symfony_fw/templates/render/control_panel/setting.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting.html.twig
@@ -81,6 +81,8 @@
             {{form_row(form.registrationUserConfirmAdmin)}}
             {{form_row(form.loginAttemptTime, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.loginAttemptCount, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            {{form_row(form.registration)}}
+            {{form_row(form.recoverPassword)}}
             {{form_row(form.captcha)}}
             {{form_row(form.useType)}}
         </div>
