--- a/symfony_fw/templates/render/registration.html.twig
+++ b/symfony_fw/templates/render/registration.html.twig
@@ -1,6 +1,4 @@
-{% if form == null %}
-    <p>{{response.messages.success}}</p>
-{% else %}
+{% if form is not null %}
     {% form_theme form "@templateRoot/layout/layout_form_materialDesign.html.twig" %}
     
     <nav class="mdc-tab-bar mdc-tab-bar--icons-with-text">
@@ -44,4 +42,6 @@
             {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
         </form>
     </div>
+{% else %}
+    <p>{{response.messages.success}}</p>
 {% endif %}
